# plugin-polymarket

./: .env.example  .gitignore  README.md  package.json
__tests__/: getOrderBookDepth.test.ts
e2e/: project.test.ts  starter-plugin.test.ts
prompts/: actions.json  check_order_scoring.txt  get_account_access_status.txt  get_active_orders.txt  get_best_price.txt  get_market.txt  get_midpoint_price.txt  get_order_book.txt  get_order_book_depth.txt  get_order_details.txt  get_price_history.txt  get_sampling_markets.txt  get_simplified_markets.txt  get_spread.txt  get_trade_history.txt  order.txt  providers.json  research_market.txt  retrieve_all_markets.txt  setup_websocket.txt
prompts/scripts/: generate-specs.js
python/: README.md  pyproject.toml
python/elizaos_plugin_polymarket/: __init__.py  constants.py  error.py  service.py  types.py
python/elizaos_plugin_polymarket/actions/: __init__.py  account.py  api_keys.py  balances.py  elizaos.py  markets.py  orderbook.py  orders.py  positions.py  realtime.py  research.py  search.py  trading.py
python/elizaos_plugin_polymarket/providers/: __init__.py  clob.py  polymarket.py
python/elizaos_plugin_polymarket/services/: __init__.py  research_storage.py
python/tests/: __init__.py  conftest.py  test_actions.py  test_types.py
rust/: Cargo.toml  README.md
rust/src/: client.rs  constants.rs  error.rs  lib.rs  service.rs  types.rs  wasm.rs
rust/src/actions/: account.rs  api_keys.rs  balances.rs  elizaos.rs  markets.rs  mod.rs  orderbook.rs  orders.rs  positions.rs  realtime.rs  research.rs  search.rs  trading.rs
rust/src/providers/: mod.rs  polymarket.rs
rust/tests/: integration_tests.rs
src/: types.ts
src/actions/: checkOrderScoring.ts  createApiKey.ts  getAccountAccessStatus.ts  getActiveOrders.ts  getAllApiKeys.ts  getBestPrice.ts  getClobMarkets.ts  getMarketDetails.ts  getMidpointPrice.ts  getOpenMarkets.ts  getOrderBookDepth.ts  getOrderBookSummary.ts  getOrderDetails.ts  getPriceHistory.ts  getSamplingMarkets.ts  getSimplifiedMarkets.ts  getSpread.ts  getTradeHistory.ts  handleAuthentication.ts  handleRealtimeUpdates.ts  placeOrder.ts  retrieveAllMarkets.ts  revokeApiKey.ts  setupWebsocket.ts
src/utils/: clobClient.ts  llmHelpers.ts
typescript/: biome.json  biome.json.bak  build.ts  constants.ts  index.browser.ts  index.ts  package.json  templates.ts  tsconfig.json  types.ts
typescript/__tests__/: cancelOrder.test.ts  closePosition.test.ts  getBalances.test.ts  getPositions.test.ts  integration.test.ts  orderbook.test.ts  placeOrder.e2e.test.ts  polymarketProvider.test.ts
typescript/actions/: cancelOrder.ts  checkOrderScoring.ts  closePosition.ts  getMarkets.ts  getOrderDetails.ts  getPriceHistory.ts  getTokenInfo.ts  getTradeHistory.ts  index.ts  orderBook.ts  placeOrder.ts  researchMarket.ts
typescript/evaluators/: index.ts  tradeRisk.ts
typescript/providers/: index.ts  polymarket.ts
typescript/services/: index.ts  polymarket.ts  researchStorage.ts
typescript/types/: index.ts
typescript/utils/: clobClient.ts  index.ts  llmHelpers.ts  orderBook.ts
typescript/workers/: index.ts  researchTaskWorker.ts
