[package]
name = "elizaos-plugin-polymarket"
version = "2.0.0"
edition = "2021"
authors = ["elizaOS Contributors"]
description = "Polymarket prediction markets plugin for elizaOS - Rust implementation"
license = "MIT"
repository = "https://github.com/elizaos/eliza"
keywords = ["ai", "agent", "polymarket", "prediction-markets", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["tokio/full"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "js-sys", "web-sys", "getrandom/js"]

[dependencies]
# Alloy - Modern Ethereum library (for Polygon)
alloy = { version = "0.8", features = [
    "full",
    "signer-local",
] }

# Async runtime
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID handling
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP client for CLOB API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate", "zstd"] }

# WebSocket client for real-time updates
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# URL handling
url = "2.5"

# Logging
tracing = "0.1"

# Regex for validation
regex = "1.10"

# Environment variables
dotenvy = "0.15"

# Decimal arithmetic for prices
rust_decimal = { version = "1.36", features = ["serde"] }

# Hex encoding for signatures
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# WASM-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
pretty_assertions = "1.0"
wiremock = "0.6"
serial_test = "3.0"

[profile.release]
lto = true
opt-level = "z"







